[gd_scene load_steps=3 format=3 uid="uid://do3oy3lqr320g"]

[ext_resource type="Script" uid="uid://cuqedscshbnth" path="res://PauseUI/settingsMenu/settings_menu.gd" id="1_ewieb"]
[ext_resource type="AudioStream" uid="uid://dtq0aduiy7nn4" path="res://Audio/gunshot.wav" id="2_02yg4"]

[node name="settingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ewieb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 644.0
offset_bottom = 624.0

[node name="Tabs" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
current_tab = 0

[node name="Audio" type="VBoxContainer" parent="PanelContainer/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="txt" type="Label" parent="PanelContainer/Tabs/Audio"]
layout_mode = 2
text = "Master"

[node name="master_volume" type="HSlider" parent="PanelContainer/Tabs/Audio"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.15
tick_count = 11

[node name="txt2" type="Label" parent="PanelContainer/Tabs/Audio"]
layout_mode = 2
text = "Music"

[node name="music_volume" type="HSlider" parent="PanelContainer/Tabs/Audio"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.15
tick_count = 11

[node name="txt3" type="Label" parent="PanelContainer/Tabs/Audio"]
layout_mode = 2
text = "SFX"

[node name="sfx_vol" type="HSlider" parent="PanelContainer/Tabs/Audio"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.15
tick_count = 11

[node name="Accessiblity" type="VBoxContainer" parent="PanelContainer/Tabs"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 1

[node name="txt4" type="Label" parent="PanelContainer/Tabs/Accessiblity"]
layout_mode = 2
text = "Screen Shake:"

[node name="screen_shake" type="Button" parent="PanelContainer/Tabs/Accessiblity"]
unique_name_in_owner = true
layout_mode = 2
text = "On"

[node name="txt5" type="Label" parent="PanelContainer/Tabs/Accessiblity"]
layout_mode = 2
text = "Frame Freeze:"

[node name="frame_freeze" type="Button" parent="PanelContainer/Tabs/Accessiblity"]
unique_name_in_owner = true
layout_mode = 2
text = "On"

[node name="Reset" type="VBoxContainer" parent="PanelContainer/Tabs"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="reset_button" type="Button" parent="PanelContainer/Tabs/Reset"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Save File?"

[node name="reset_button_sure" type="Button" parent="PanelContainer/Tabs/Reset"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Are you really sure?"

[node name="buttons" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 552.0
offset_right = 57.0
offset_bottom = 608.0

[node name="save" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Save"

[node name="load" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Load"

[node name="reset" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Reset
Settings"

[node name="back" type="Button" parent="buttons"]
layout_mode = 2
text = "Back"

[node name="sfx" type="Node" parent="."]

[node name="button_pressed" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("2_02yg4")
volume_db = -10.0
pitch_scale = 2.0

[connection signal="pressed" from="PanelContainer/Tabs/Accessiblity/screen_shake" to="." method="_on_screen_shake_pressed"]
[connection signal="pressed" from="PanelContainer/Tabs/Accessiblity/frame_freeze" to="." method="_on_frame_freeze_pressed"]
[connection signal="pressed" from="buttons/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="buttons/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="buttons/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
